added configurations for database and USAEpayAPI credentias

--- a/JobsService/appsettings.Development.json
+++ b/JobsService/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "TransactionsHubDB": "Server=database-handshake.c9d5jsphzk9r.us-east-1.rds.amazonaws.com;Database=TransactionsHub2;User Id=user2;Password=jsl54fdlsd.3D5%sa23fgk$&g;TrustServerCertificate=True"
+  },
+  "UsaEpayAPICredentials": {
+    "Key": "_1v60HeN4Wpe03jK2rcZ8Q6u309MRj48",
+    "Pin": "sdk5G4"
+  },
+  "UsaEpayAPIUrl": "https://sandbox.usaepay.com/api/v2/"
 }
