Developed MonthlyChargeJob and SecurityCheckJob

--- a/JobsService/appsettings.Development.json
+++ b/JobsService/appsettings.Development.json
@@ -6,7 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "TransactionsHubDB": "Server=database-handshake.c9d5jsphzk9r.us-east-1.rds.amazonaws.com;Database=TransactionsHub2;User Id=user2;Password=jsl54fdlsd.3D5%sa23fgk$&g;TrustServerCertificate=True"
+    "TransactionsHubDB": "Server=database-handshake.c9d5jsphzk9r.us-east-1.rds.amazonaws.com;Database=TransactionsHub2;User Id=user2;Password=jsl54fdlsd.3D5%sa23fgk$&g;TrustServerCertificate=True",
+    "_TransactionsHubDB": "Server=localhost;Database=thing;Integrated Security=True;TrustServerCertificate=True"
+
   },
   "UsaEpayAPICredentials": {
     "Key": "_1v60HeN4Wpe03jK2rcZ8Q6u309MRj48",
